<resources>
    <string name="app_name">Page Animation Example</string>
    <string name="welcome">SPLASH</string>
    <string name="do_magic">DO MAGIC</string>
    <string name="transitions_are_awesome">Transitions are awesome!</string>
    <string name="transitions_are_really_awesome">Transitions are really awesome!</string>
    <string name="create_preferences">CREATE PREFERENCES</string>
    <string name="tap_here_to_continue">TAP HERE TO CONTINUE</string>
    <string name="tap_here_to_collapse">TAP HERE TO COLLAPSE</string>
    <string name="type_of_transition">Type Of Transition : Default</string>
    <string name="page_indicator_allowed">Page Indicator : Yes</string>
    <string name="allow_automatic_page_change">Automatic Page Change : Yes</string>
    <string name="not_allow_automatic_page_change">Automatic Page Change : No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_of_tra">Type Of Transition</string>
    <string name="image_transformer">IMAGE TRANSFORMER</string>
    <string name="do_you_want_page_to_change_automatically">Do you want page to change automatically?</string>
    <string name="preference">PREFERENCE</string>
    <string name="page_indicator_not_allowed">Page Indicator : No</string>
    <string name="select_all_options">Please select all options above</string>
    <string name="ok">OK</string>
    <string name="page_count">Page Count</string>
    <string name="skip">SKIP</string>
    <string name="about_developer">ABOUT DEVELOPER</string>
    <string name="about_author">Hii, \nI am Ankit. Thanks for using this application. \nIf you require source code I am ready to help and \n you can write me at\n ankit.andev@gmail.com\n Thanks!!</string>
</resources>
